# dexit

./: .gitignore  README.rst  requirements.txt  setup.cfg  tox.ini
conf/: node.conf
dexit/: dexit.py
dexit/data/: dataloaders.py
dexit/early_exit/: early_exit.py  early_exit_vgg_0.pt  early_exit_vgg_1.pt  early_exit_vgg_2.pt
dexit/models/: device.pth  server.pth
dexit/network/: handler.py
dexit/utils/: operations.py  state.py
diagrams/: diagram.wsd
